Updating documentation (in some small way, at least) for newly added RollupFlowFullRecalcDispatcher, added correct invocable annotations for it

--- a/rollup/core/classes/RollupFlowFullRecalcDispatcher.cls
+++ b/rollup/core/classes/RollupFlowFullRecalcDispatcher.cls
@@ -8,6 +8,7 @@ global without sharing class RollupFlowFullRecalcDispatcher {
     global String rollupDeveloperNames;
   }
 
+  @InvocableMethod(category='Rollups' label='Full Recalc CMDT-driven Invocable')
   public static void performFullRecalcRollups(List<FlowInput> inputs) {
     List<Rollup__mdt> localRollupMetadata = Rollup.getMetadataFromCache(Rollup__mdt.SObjectType);
     List<Rollup__mdt> selectedRollupMetadata = new List<Rollup__mdt>();
