--- a/extra-tests/classes/RollupFinalizerTests.cls
+++ b/extra-tests/classes/RollupFinalizerTests.cls
@@ -7,31 +7,13 @@ private class RollupFinalizerTests {
   }
 
   @IsTest
-  static void shouldRestartRollupWhenQueueableFails() {
-    Account acc = [SELECT Id FROM Account];
-
-    RollupFinalizer.testResult = ParentJobResult.UNHANDLED_EXCEPTION;
-    Rollup.records = new List<Opportunity>{ new Opportunity(AccountId = acc.Id, Amount = 5) };
-    Rollup.shouldRun = true;
-    Rollup.apexContext = TriggerOperation.AFTER_INSERT;
-    Rollup roll = Rollup.sumFromApex(Opportunity.Amount, Opportunity.AccountId, Account.Id, Account.AnnualRevenue, Account.SObjectType);
-
-    Test.startTest();
-    new RollupFinalizer(roll).execute(null);
-    Test.stopTest();
-
-    acc = [SELECT AnnualRevenue FROM Account];
-    System.assertEquals(5, acc.AnnualRevenue);
-  }
-
-  @IsTest
-  static void shouldGracefullyRecoverFromThrownException() {
+  static void shouldGracefullyLogUnhandledException() {
     RollupFinalizer.testResult = ParentJobResult.UNHANDLED_EXCEPTION;
 
     Test.startTest();
-    new RollupFinalizer(null).execute(null);
+    new RollupFinalizer().execute(null);
     Test.stopTest();
 
-    System.assert(true, 'Should make it here');
+    System.assert(true, RollupFinalizer.wasCalled);
   }
 }
