--- a/rollup/core/classes/Rollup.cls
+++ b/rollup/core/classes/Rollup.cls
@@ -202,7 +202,8 @@ global without sharing virtual class Rollup {
     FROM_SCHEDULED,
     FROM_LWC,
     FROM_SINGULAR_PARENT_RECALC_LWC,
-    FROM_STATIC_LOGGER
+    FROM_STATIC_LOGGER,
+    FROM_SCHEDULED_FLOW
   }
 
   protected Rollup() {
@@ -1730,7 +1731,7 @@ global without sharing virtual class Rollup {
         return wrapper;
       }
     }
-    if (meta.IsRollupStartedFromParent__c == false && String.isBlank(meta.GrandparentRelationshipFieldPath__c)) {
+    if (meta.IsRollupStartedFromParent__c == false) {
       wrapper = new QueryWrapper('', meta.LookupFieldOnCalcItem__c);
       for (SObject calcItem : calcItems) {
         wrapper.addRecordId((String) calcItem.get(meta.LookupFieldOnCalcItem__c));
